--- a/CSS/animal-trading-cards-master/styles.css
+++ b/CSS/animal-trading-cards-master/styles.css
@@ -8,7 +8,7 @@ body {
 .background {
     background-repeat: no-repeat;
     width: 300px;
-    margin: auto;
+    margin: 10px;
     border: 10px solid rgb(20, 20, 20);
     border-radius: 8px;
     padding: 10px;
